change modpack
https://www.curseforge.com/minecraft/modpacks/crafttoexiledissonance